--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +36,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react-bootstrap": "^1.0.1",
+    "@types/react-datepicker": "^3.1.0",
+    "bootstrap": "^4.5.0",
+    "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
+    "typescript": "^3.9.7",
     "yarn": "^1.22.4"
   }
 }
