--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@types/react-datepicker": "^3.1.0",
     "bootstrap": "^4.5.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-datepicker": "^3.1.3",
     "typescript": "^3.9.7",
     "yarn": "^1.22.4"
