--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,11 @@
     ]
   },
   "devDependencies": {
+    "@types/node-polyglot": "^2.4.1",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-datepicker": "^3.1.0",
     "bootstrap": "^4.5.0",
+    "node-polyglot": "^2.4.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-datepicker": "^3.1.3",
