--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,11 +39,13 @@
     "@types/node-polyglot": "^2.4.1",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-datepicker": "^3.1.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "bootstrap": "^4.5.0",
     "node-polyglot": "^2.4.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-datepicker": "^3.1.3",
+    "react-infinite-scroller": "^1.2.4",
     "typescript": "^3.9.7",
     "yarn": "^1.22.4"
   }
