pinkdumbell DB로 변경

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/pinkdumbbell?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://18.222.230.125:3306/pinkdumbbell?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=smile
+spring.datasource.password=pink1234!
