--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,12 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node-polyglot": "^2.4.1",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-datepicker": "^3.1.0",
     "@types/react-infinite-scroller": "^1.2.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "node-polyglot": "^2.4.0",
     "react-bootstrap": "^1.3.0",
