spring boot 배포를 war과 jar의 차이

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,12 @@ group = 'pinkdumbbell'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jar {
+	manifest{
+		attributes 'Main-Class': 'HelloWorld'
+	}
+}
+
 repositories {
 	mavenCentral()
 }
