- 364e7a3 커밋은 실수로 올려진 커밋 - spring boot 배포를 war과 jar의 차이 -> spring boot 배포를 jar 파일로 생성 할 수 있는 기능 추가 - jar 파일의 네이밍은 [jar.manifest.attributes]-[version] 의 조합으로 생성된다.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -10,7 +10,7 @@ sourceCompatibility = '11'
 
 jar {
 	manifest{
-		attributes 'Main-Class': 'HelloWorld'
+		attributes 'Main-Class': 'YoutubeTrendApplication'
 	}
 }
 
