- 서버 포트번호 변경 8080 -> 8081

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://18.222.230.125:3306/pinkdumbbell?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pink1234!
+server.port=8081
+server.compression.enabled=true
