--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@types/react-datepicker": "^3.1.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
+    "eslint-webpack-plugin": "^2.1.0",
     "node-polyglot": "^2.4.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
